--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -175,7 +175,7 @@ body{
 	box-sizing: border-box;
 }
 .container{
-	max-width: 1170px;
+	max-width: 100%;
 }
 .row{
 	display: flex;
